--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <div class="div">
+        <ul class="job__link__list"></ul>
+        <button class="job__clear"></button>
+      </div>
+    </header>
     <ul class="job__list">
       <template class="job__template">
         <li class="job__item">
