--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       </template>
     </ul>
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
